# cmaketemplate

./: .gitignore  CMakeLists.txt  make.sh  makeandrun.sh
include/BUBLIB/: bublib.h
lib/SFML-2.5.1/: SFMLSharedTargets.cmake  cmake_install.cmake
lib/SFML-2.5.1/src/SFML/: cmake_install.cmake
lib/SFML-2.5.1/src/SFML/Audio/: cmake_install.cmake
lib/SFML-2.5.1/src/SFML/Graphics/: cmake_install.cmake
lib/SFML-2.5.1/src/SFML/Network/: cmake_install.cmake
lib/SFML-2.5.1/src/SFML/System/: cmake_install.cmake
lib/SFML-2.5.1/src/SFML/Window/: cmake_install.cmake
src/: main.cpp
src/BUBLIB/: bublib.cpp
